--- a/gallery.html
+++ b/gallery.html
@@ -29,10 +29,8 @@
                 <a href="contact.html">Contact</a>
             </div>
         </div>
-        <a href="quote.html" class="quote-btn">Get a Quote</a>
+        <a href="#" class="quote-btn">Get a Quote</a>
     </nav>
 
 
 </body>
-
-</html>
