--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+
 
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
                 <a href="contact.html">Contact</a>
             </div>
         </div>
-        <a href="#" class="quote-btn">Get a Quote</a>
+        <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
 
 
