--- a/quote.html
+++ b/quote.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -29,7 +28,7 @@
                 <a href="contact.html">Contact</a>
             </div>
         </div>
-        <a href="#" class="quote-btn">Get a Quote</a>
+        <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
 
 
