--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         </div>
         <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
+    <img src="Saint John.jpg" alt="Image of the City of Saint John" width="100%">
+    <img src="Saint John2.jpg" alt="Image of the City of Saint John" width="100%">
+    <img src="Saint John3.jpg" alt="Image of the City of Saint John" width="100%">
 
 
 </body>
