--- a/services.html
+++ b/services.html
@@ -6,6 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSFlooring</title>
     <link rel="stylesheet" href="styleSheet1.css">
+    <style>
+        /* Services Section */
+        .services {
+            display: flex;
+            justify-content: space-around;
+            padding: 40px 20px;
+            background-color: #e2e2e2;
+        }
+
+        .services h3 {
+            width: 100%;
+            text-align: center;
+            font-size: 2rem;
+        }
+
+        .service-card {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            padding: 20px;
+            width: 30%;
+            text-align: center;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .service-card h4 {
+            color: #333;
+            font-size: 1.5rem;
+        }
+
+        .service-card p {
+            font-size: 1rem;
+            color: #777;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,6 +65,21 @@
         </div>
         <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
+    <section class="services">
+        <h3>Our Tile Setting Services</h3>
+        <div class="service-card">
+            <h4>Floor Tiling</h4>
+            <p>We offer professional floor tiling for bathrooms, kitchens, living rooms, and more.</p>
+        </div>
+        <div class="service-card">
+            <h4>Wall Tiling</h4>
+            <p>Enhance your walls with beautiful and durable tiles. Perfect for kitchens, bathrooms, and beyond.</p>
+        </div>
+        <div class="service-card">
+            <h4>Custom Designs</h4>
+            <p>Get unique tile designs tailored to your preferences. Bring your vision to life!</p>
+        </div>
+    </section>
 
 
 </body>
