--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSFlooring</title>
     <link rel="stylesheet" href="styleSheet1.css">
+    <style>
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        .contact-info {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .contact-info p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 
 <body>
@@ -31,6 +54,12 @@
         </div>
         <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
+    <div id="container">
+        <div class="contact-info">
+            <p><strong>Phone:</strong> (506) 609-1074</p>
+            <p><strong>Email:</strong> sorinstanica70@gmail.com</p>
+        </div>
+    </div>
 
 
 </body>
