Added New Images

--- a/gallery.html
+++ b/gallery.html
@@ -9,14 +9,22 @@
     <style>
         @media (max-width: 768px) {
             #content {
-                grid-template-columns: auto auto;
+                grid-template-columns: auto;
+            }
+
+            #content img {
+                width: 100%;
             }
         }
 
         @media (min-width: 768px) {
             #content {
                 display: grid;
-                grid-template-columns: auto auto auto auto;
+                grid-template-columns: auto auto;
+            }
+
+            #content img {
+                width: 70%;
             }
         }
     </style>
@@ -47,6 +55,65 @@
         <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
     <div id="content">
+        <img src="images/PHOTO-2025-02-17-20-21-15.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_1.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_10.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_11.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_12.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_13.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_14.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_15.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_16.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_17.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_18.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_19.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_2.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_20.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_21.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_22.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_23.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_24.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_25.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_26.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_27.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_28.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_29.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_3.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_30.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_31.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_32.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_33.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_34.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_35.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_36.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_37.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_38.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_39.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_4.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_40.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_41.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_42.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_43.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_44.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_45.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_46.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_47.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_48.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_49.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_5.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_50.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_51.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_52.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_53.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_54.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_55.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_56.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_57.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_6.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_7.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_8.jpg" alt="Tile Setting">
+        <img src="images/PHOTO-2025-02-17-20-21-15_9.jpg" alt="Tile Setting">
+
         <blockquote class="instagram-media"
             data-instgrm-permalink="https://www.instagram.com/reel/CsKTjuegf-5/?utm_source=ig_embed&amp;utm_campaign=loading"
             data-instgrm-version="14"
