--- a/gallery.html
+++ b/gallery.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSFlooring</title>
     <link rel="stylesheet" href="styleSheet1.css">
+    <link rel="icon" type="image/x-icon" href="SSFlooringLogo.png">
     <style>
         @media (max-width: 768px) {
             #content {
