Added New Photos

--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,28 @@
         <a href="quote.html" class="quote-btn">Get a Quote</a>
     </nav>
     <div id="content">
+        <img src="images/New/IMG_6514.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6744.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6745.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6746.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6749.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6781.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6817.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6818.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6840.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6841.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6842.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6843.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6844.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6890.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6891.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6892.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6917.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6932.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6971.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6972.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6973.JPG" alt="Tile Setting">
+        <img src="images/New/IMG_6974.JPG" alt="Tile Setting">
         <img src="images/PHOTO-2025-02-17-20-21-15.jpg" alt="Tile Setting">
         <img src="images/PHOTO-2025-02-17-20-21-15_1.jpg" alt="Tile Setting">
         <img src="images/PHOTO-2025-02-17-20-21-15_10.jpg" alt="Tile Setting">
