--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,9 @@
     <div id="container">
         <div class="contact-info">
             <p><strong>Phone:</strong> (506) 609-1074</p>
+            <a href= “tel:+15066091074>Phone (506) 609-1074</a>
             <p><strong>Email:</strong> sorinstanica70@gmail.com</p>
+            <a href="https://www.instagram.com/sorin_stanica_flooring/">Instagram</a>
         </div>
     </div>
 
