--- a/quote.html
+++ b/quote.html
@@ -56,7 +56,7 @@
     </nav>
     <div id="container">
         <div class="contact-info">
-            <a href= “tel:+15066091074>Phone (506) 609-1074</a>
+            <p><strong>Phone:</strong> (506) 609-1074</p>
             <p><strong>Email:</strong> sorinstanica70@gmail.com</p>
             <a href="https://www.instagram.com/sorin_stanica_flooring/">Instagram</a>
         </div>
