--- a/test.html
+++ b/test.html
@@ -5,6 +5,11 @@
 
 </head>
 <body>
-    <H3>TESTING</H3>
+   <form id="quoteForm">
+  <input type="text" id="name" required />
+  <input type="email" id="email" required />
+  <textarea id="message" required></textarea>
+  <button type="submit">Get Quote</button>
+</form>
 </body>
 </html>
